src/objects/SIS_Management_Visibility__mdt.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Visible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <label>SIS Management Type</label>
        <referenceTo>Sis_Management_Type__mdt</referenceTo>
        <relationshipLabel>SIS Management Visibilities</relationshipLabel>
        <relationshipName>SIS_Management_Visibilities</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <label>Sector</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SIS Management Visibility</label>
    <pluralLabel>SIS Management Visibilities</pluralLabel>
</CustomObject>